--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
+	<link rel="shortcut icon" type="image/png" href="images/tabIcon.png" />
 </head>
 
 <body class="is-preload">
@@ -27,10 +28,11 @@
 	<nav id="menu">
 		<ul class="links">
 			<li><a href="index.html">Home</a></li>
-			<li><a href="generic.html">Generic</a></li>
-			<li><a href="elements.html">Elements</a></li>
-			<li><a href="#" class="button primary">Sign Up</a></li>
-			<li><a href="#" class="button">Log In</a></li>
+			<li><a href="pages/about-us.html">About Us</a></li>
+			<li><a href="pages/products.html#products">Products</a></li>
+			<li><a href="pages/products.html">Species</a></li>
+			<li><a href="pages/gallery.html">Gallery</a></li>
+			<li><a href="#six">Contact Us</a></li>
 		</ul>
 	</nav>
 
@@ -43,7 +45,7 @@
 			<div class="image">
 				<img src="images/logo-transparent.png" alt="" />
 			</div>
-			<p>Some sort of quick thing thats catchy n good, or at least we hope it will be haha</p>
+			<p>Old fashioned lumber at old fashioned prices</p>
 			<ul class="actions special">
 				<li><a href="#one" class="button large wide scrolly-middle">Learn More</a></li>
 			</ul>
@@ -56,13 +58,13 @@
 			<div class="image" data-position="top right">
 				<img src="images/3.jpg" alt="" />
 			</div>
-			<h2>Service #1</h2>
+			<h2>Products</h2>
 			<div class="content">
-				<h3>Something about <br>Service #1</h3>
-				<p>Sed egestas, ante et vulputate lorem ipsum dolor sit amet nullam pede semper est, vitae luctus metus
-					libero eu augue. Morbi purus sed libero, faucibus adipiscing, gravida lorem ipsum.</p>
+				<h3>Lumber and By-Products</h3>
+				<p>Our mill offers a wide range of wood products, including boards, framing lumber, timbers, and slabs
+					that are perfect for a variety of construction and woodworking projects.</p>
 				<ul class="actions">
-					<li><a href="#" class="button primary accent3">Call Now</a></li>
+					<li><a href="pages/products.html" class="button primary accent3">View All</a></li>
 				</ul>
 			</div>
 		</div>
@@ -74,13 +76,13 @@
 			<div class="image" data-position="top left">
 				<img src="images/5.jpg" alt="" />
 			</div>
-			<h2>Service #2</h2>
+			<h2>About Us</h2>
 			<div class="content">
-				<h3>Something about <br>Service #2</h3>
-				<p>Sed egestas, ante et vulputate lorem ipsum dolor sit amet nullam pede semper est, vitae luctus metus
-					libero eu augue. Morbi purus sed libero, faucibus adipiscing, gravida lorem ipsum.</p>
+				<h3>Local & Family-Owned</h3>
+				<p>We are a local sawmill providing the community with a reliable source of freshly cut lumber and other
+					wood products.</p>
 				<ul class="actions">
-					<li><a href="#" class="button primary accent2">Call Now</a></li>
+					<li><a href="pages/about-us.html" class="button primary accent2">Learn More</a></li>
 				</ul>
 			</div>
 		</div>
@@ -92,20 +94,20 @@
 			<div class="image" data-position="center right">
 				<img src="images/4.jpg" alt="" />
 			</div>
-			<h2>Service #3</h2>
+			<h2>Gallery</h2>
 			<div class="content">
-				<h3>Something about <br>Service #3</h3>
-				<p>Sed egestas, ante et vulputate lorem ipsum dolor sit amet nullam pede semper est, vitae luctus metus
-					libero eu augue. Morbi purus sed libero, faucibus adipiscing, gravida lorem ipsum.</p>
+				<h3>Browse Our Gallery</h3>
+				<p>If you're interested in seeing the high-quality wood products we offer, be sure to check out the
+					gallery, which features stunning images of our mill and products.</p>
 				<ul class="actions">
-					<li><a href="#" class="button primary accent1">Call Now</a></li>
+					<li><a href="pages/gallery.html" class="button primary accent1">View Gallery</a></li>
 				</ul>
 			</div>
 		</div>
 	</article>
 
 	<!-- Carousel -->
-	<section id="four" class="wrapper style2">
+	<!-- <section id="four" class="wrapper style2">
 		<div class="inner">
 			<header class="major">
 				<h2>Section #2 Idea</h2>
@@ -160,45 +162,45 @@
 				</nav>
 			</div>
 		</div>
-	</section>
+	</section> -->
 
 	<!-- Posts -->
 	<section id="five" class="wrapper">
 		<div class="inner">
 			<header class="major">
-				<h2>Section #3 Idea</h2>
+				<h2>Range of Products</h2>
 			</header>
 			<div class="posts">
 				<article>
+					<a href="#" class="image"><img src="images/3.jpg" alt="" /></a>
+					<div class="content">
+						<h3><a href="#">Lumber</a></h3>
+						<p>Our mill offers a wide range of wood products, including boards, framing lumber, timbers, and
+							slabs that are perfect for a variety of construction and woodworking projects.</p>
+						<ul class="actions special">
+							<li><a href="#" class="button primary accent2">View more</a></li>
+						</ul>
+					</div>
+				</article>
+				<article>
 					<a href="#" class="image"><img src="images/1.jpg" alt="" /></a>
 					<div class="content">
-						<h3><a href="#">Something #1</a></h3>
-						<p>Sed egestas, ante et vulputate lorem ipsum sed dolor sit amet Morbi purus sed libero,
-							faucibus adipiscing, commodo quis. Lorem ipsum dolor sit amet nullam sed adipiscing.</p>
+						<h3><a href="#">By-Products</a></h3>
+						<p>In addition to our primary wood products, we also offer a variety of useful by-products,
+							including firewood slab bundles, sawdust, bark mulch, and wood chips.</p>
 						<ul class="actions special">
-							<li><a href="#" class="button primary accent2">Learn more</a></li>
+							<li><a href="#" class="button primary accent2">View more</a></li>
 						</ul>
 					</div>
 				</article>
-				<article>
-					<a href="#" class="image"><img src="images/2.jpg" alt="" /></a>
-					<div class="content">
-						<h3><a href="#">Something #2</a></h3>
-						<p>Sed egestas, ante et vulputate lorem ipsum sed dolor sit amet Morbi purus sed libero,
-							faucibus adipiscing, commodo quis. Lorem ipsum dolor sit amet nullam sed adipiscing.</p>
-						<ul class="actions special">
-							<li><a href="#" class="button primary accent2">Learn more</a></li>
-						</ul>
-					</div>
-				</article>
-				<article>
+				<!-- <article>
 					<a href="#" class="image"><img src="images/9.jpg" alt="" /></a>
 					<div class="content">
 						<h3><a href="#">Something #3</a></h3>
 						<p>Sed egestas, ante et vulputate lorem ipsum sed dolor sit amet Morbi purus sed libero,
 							faucibus adipiscing, commodo quis. Lorem ipsum dolor sit amet nullam sed adipiscing.</p>
 						<ul class="actions special">
-							<li><a href="#" class="button primary accent2">Learn more</a></li>
+							<li><a href="#" class="button primary accent2">View more</a></li>
 						</ul>
 					</div>
 				</article>
@@ -209,10 +211,10 @@
 						<p>Sed egestas, ante et vulputate lorem ipsum sed dolor sit amet Morbi purus sed libero,
 							faucibus adipiscing, commodo quis. Lorem ipsum dolor sit amet nullam sed adipiscing.</p>
 						<ul class="actions special">
-							<li><a href="#" class="button primary accent2">Learn more</a></li>
+							<li><a href="#" class="button primary accent2">View more</a></li>
 						</ul>
 					</div>
-				</article>
+				</article> -->
 			</div>
 		</div>
 	</section>
@@ -222,7 +224,18 @@
 		<div class="inner">
 			<header class="major">
 				<h2>Contact Us</h2>
-				<p>Fill out the form below and we will get back to you as soon as possible</p>
+				<p class="contact-p">Bardford Smith: <a href="tel:4016472755"
+						onclick="ga('send', 'event', { eventCategory: 'Contact', eventAction: 'Call', eventLabel: 'Mobile Button'});">(401)
+						647-2755</a></p>
+				<p class="contact-p">Timothy Smith, PE: <a href="tel:4013007814"
+						onclick="ga('send', 'event', { eventCategory: 'Contact', eventAction: 'Call', eventLabel: 'Mobile Button'});">(401)
+						300-7814</a></p>
+				<p class="contact-p"><a
+						href="https://www.google.com/maps/place/55+Winsor+Rd,+Foster,+RI+02825/@41.841795,-71.7307835,17z/data=!3m1!4b1!4m6!3m5!1s0x89e4306e4358713b:0x17bfea306c91767b!8m2!3d41.841795!4d-71.7307835!16s%2Fg%2F11f2wlsrnv">55
+						Winsor Road, Foster, RI</a></p>
+				<p><a
+						href="https://mail.google.com/mail/?view=cm&fs=1&to=winsor.forest.products@gmail.com&su=Subject&body=Body">winsor.forest.products@gmail.com</a>
+				</p>
 			</header>
 			<form method="post" action="https://formspree.io/f/mzboalqk">
 				<div class="row gtr-uniform">
@@ -251,10 +264,15 @@
 	<!-- Footer -->
 	<footer id="footer">
 		<ul class="contact-icons">
-			<li class="icon solid fa-map-marker-alt"><a href="#">1234 Fictional Street Foster, RI
-					00000-0000</a></li>
-			<li class="icon solid fa-phone"><a href="#">(000) 000-0000</a></li>
-			<li class="icon solid fa-envelope"><a href="#">your@email.com</a></li>
+			<li class="icon solid fa-map-marker-alt"><a
+					href="https://www.google.com/maps/place/55+Winsor+Rd,+Foster,+RI+02825/@41.841795,-71.7307835,17z/data=!3m1!4b1!4m6!3m5!1s0x89e4306e4358713b:0x17bfea306c91767b!8m2!3d41.841795!4d-71.7307835!16s%2Fg%2F11f2wlsrnv">55
+					Winsor Road, Foster, RI</a></li>
+			<li class="icon solid fa-phone"><a href="tel:4013007814"
+					onclick="ga('send', 'event', { eventCategory: 'Contact', eventAction: 'Call', eventLabel: 'Mobile Button'});">(401)
+					300-7814</a></li>
+			<li class="icon solid fa-envelope"><a
+					href="https://mail.google.com/mail/?view=cm&fs=1&to=winsor.forest.products@gmail.com&su=Subject&body=Body">winsor.forest.products@gmail.com</a>
+			</li>
 		</ul>
 		<div class="copyright">
 			&copy; <a href="https://www.webundefined.com">Web Undefined, LLC</a>. All rights reserved.
