changes for launch

--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -34,6 +34,7 @@
 							<li><a href="products.html#products" class="scrolly">Products</a></li>
 						</ul>
 					</li>
+					<li><a href="services.html">Services</a></li>
 					<li class="current"><a href="gallery.html">Gallery</a></li>
 					<li><a href="#six" class="scrolly">Contact Us</a></li>
 				</ul>
