--- a/pages/products.html
+++ b/pages/products.html
@@ -31,6 +31,7 @@
 							<li><a href="#products" class="scrolly">Products</a></li>
 						</ul>
 					</li>
+					<li><a href="services.html">Services</a></li>
 					<li><a href="gallery.html">Gallery</a></li>
 					<li><a href="#six" class="scrolly">Contact Us</a></li>
 				</ul>
@@ -39,7 +40,7 @@
 		</section>
 
 		<!-- Section -->
-		<section class="wrapper style1" id="servicePad">
+		<section class="wrapper style1" id="servicePad" style="padding-bottom: 0;">
 			<div class="inner">
 				<header class="major special">
 					<h1 style="margin-bottom: 0;">Species</h1>
@@ -50,11 +51,14 @@
 
 						<div class="spotlights">
 							<section class="serviceSectionPadding">
-								<div class="image"><img src="images/eastern-white-pine.png" alt="Eastern White Pine" />
+								<div class="image"><a href="https://www.wood-database.com/eastern-white-pine/"><img
+											src="images/eastern-white-pine.png" alt="Eastern White Pine" /></a>
 								</div>
 								<div class="content">
 									<header class="major">
-										<h3>Eastern White Pine</h3>
+										<h3><a href="https://www.wood-database.com/eastern-white-pine/"
+												class="no-border">Eastern White
+												Pine</a></h3>
 									</header>
 									<p>Eastern White Pine is our most commonly sawn product. It has a light brown
 										(sometimes reddish) heartwood and nearly white sapwood that tends to darken with
@@ -64,82 +68,146 @@
 									<p><b>Rot Resistance:</b> Moderate decay resistance</p>
 								</div>
 							</section>
+							<section class="serviceSectionPadding">
+								<div class="image"><a href="https://www.wood-database.com/red-oak/"><img
+											src="images/red-oak.png" alt="Red Oak" /></a>
+								</div>
+								<div class="content">
+									<header class="major">
+										<h3><a href="https://www.wood-database.com/red-oak/" class="no-border">Red
+												Oak</a></h3>
+									</header>
+									<p>Red Oak is our most commonly sawn hardwood product. Red Oak flooring is one of
+										the most popular used in America. The heartwood is a light to medium red/brown.
+										Grain is straight, with a coarse, uneven texture. It is highly resistant to
+										dents and deep scratches</p>
+									<p><b>Common Uses:</b> Trailer Decking, Furniture, Flooring, Fencing</p>
+									<p><b>Rot Resistance:</b> Poor decay resistance</p>
+								</div>
+							</section>
+							<section class="serviceSectionPadding">
+								<div class="image"><a href="https://www.wood-database.com/red-maple/"><img
+											src="images/maple.png" alt="Red Maple" /></a>
+								</div>
+								<div class="content">
+									<header class="major">
+										<h3><a href="https://www.wood-database.com/red-maple/" class="no-border">Red
+												Maple</a></h3>
+									</header>
+									<p>Red Maple is our second most commonly sawn hardwood product. The sapwood color
+										ranges from almost white, to a light golden or reddish brown, whereas the
+										heartwood is a darker reddish brown. Maple can sometimes be found with curly
+										grain patterns or may be spalted adding to its character.</p>
+									<p><b>Common Uses:</b> Furniture, Flooring, Wood Turning, Pallet Making</p>
+									<p><b>Rot Resistance:</b> Poor decay resistance</p>
+								</div>
+							</section>
 						</div>
 						<div class="box alt bottom-pad">
-							<header class="major">
+							<header class="major special centered">
 								<h3>Other Softwoods</h3>
 							</header>
 							<div class="row gtr-50 gtr-uniform">
 								<div class="col-4">
 									<header>
-										<h4>Spruce</h4>
-									</header><span class="image fit"><img src="images/spruce.png" alt="" /></span>
+										<h4 class="centered"><a
+												href="https://www.wood-database.com/spruce-pine/">Spruce</a></h4>
+									</header><span class="image fit"><a
+											href="https://www.wood-database.com/spruce-pine/">
+											<img class="full-circle" src="images/spruce.png" alt="" />
+										</a></span>
 								</div>
 								<div class="col-4">
 									<header>
-										<h4>Red Pine</h4>
-									</header><span class="image fit"><img src="images/red-pine.png" alt="" /></span>
+										<h4 class="centered"><a href="https://www.wood-database.com/red-pine/">Red
+												Pine</a></h4>
+									</header><span class="image fit"><a href="https://www.wood-database.com/red-pine/">
+											<img class="full-circle" src="images/red-pine.png" alt="" />
+										</a></span>
 								</div>
 								<div class="col-4">
 									<header>
-										<h4>Hemlock</h4>
-									</header><span class="image fit"><img src="images/hemlock.png" alt="" /></span>
+										<h4 class="centered"><a
+												href="https://www.wood-database.com/hemlock/">Hemlock</a></h4>
+									</header><span class="image fit"><a href="https://www.wood-database.com/hemlock/">
+											<img class="full-circle" src="images/hemlock.png" alt="" />
+										</a></span>
 								</div>
 							</div>
 						</div>
 						<div class="box alt bottom-pad">
-							<header class="major">
-								<h3>Hardwoods</h3>
+							<header class="major special centered">
+								<h3>Specialty Wood</h3>
+								<p style="margin-bottom: 2em;">Specialty hardwood is able to be acquired and sawn by
+									request. Both the length and
+									width of this material is dependant upon the species. Inquire for more information.
+								</p>
 							</header>
 							<div class="row gtr-50 gtr-uniform">
 								<div class="col-4">
 									<header>
-										<h4>Red Oak</h4>
-									</header><span class="image fit"><img src="images/red-oak.png" alt="" /></span>
+										<h4 class="centered"><a href="https://www.wood-database.com/white-oak/">White
+												Oak</a></h4>
+									</header><span class="image fit"><a href="https://www.wood-database.com/white-oak/">
+											<img class="full-circle" src="images/white-oak.png" alt="" />
+										</a></span>
 								</div>
 								<div class="col-4">
 									<header>
-										<h4>White Oak</h4>
-									</header><span class="image fit"><img src="images/white-oak.png" alt="" /></span>
+										<h4 class="centered"><a href="https://www.wood-database.com/white-ash/">Ash</a>
+										</h4>
+									</header><span class="image fit"><a href="https://www.wood-database.com/white-ash/">
+											<img class="full-circle" src="images/ash.png" alt="" />
+										</a></span>
 								</div>
 								<div class="col-4">
 									<header>
-										<h4>Maple</h4>
-									</header><span class="image fit"><img src="images/maple.png" alt="" /></span>
+										<h4 class="centered"><a
+												href="https://www.wood-database.com/yellow-poplar/">Poplar</a></h4>
+									</header><span class="image fit"><a
+											href="https://www.wood-database.com/yellow-poplar/">
+											<img class="full-circle" src="images/poplar.jpg" alt="" />
+										</a></span>
 								</div>
 							</div>
-						</div>
-						<div class="box alt">
-							<header class="major">
-								<h3>Other Hardwoods</h3>
-							</header>
-							<div class="row gtr-50 gtr-uniform">
+							<div style="padding-top: 2em;" class="row gtr-50 gtr-uniform">
 								<div class="col-4">
 									<header>
-										<h4>Ash</h4>
-									</header><span class="image fit"><img src="images/ash.png" alt="" /></span>
+										<h4 class="centered"><a
+												href="https://www.wood-database.com/downy-birch/">Birch</a></h4>
+									</header><span class="image fit"><a
+											href="https://www.wood-database.com/downy-birch/">
+											<img class="full-circle" src="images/birch.png" alt="" />
+										</a></span>
 								</div>
 								<div class="col-4">
 									<header>
-										<h4>Birch</h4>
-									</header><span class="image fit"><img src="images/birch.png" alt="" /></span>
+										<h4 class="centered"><a href="https://www.wood-database.com/black-cherry/">Black
+												Cherry</a>
+										</h4>
+									</header><span class="image fit"><a
+											href="https://www.wood-database.com/black-cherry/">
+											<img class="full-circle" src="images/black-cherry.png" alt="" />
+										</a></span>
 								</div>
 								<div class="col-4">
 									<header>
-										<h4>Black Cherry</h4>
-									</header><span class="image fit"><img src="images/black-cherry.png" alt="" /></span>
-								</div>
-								<div class="col-4">
-									<header>
-										<h4>Black Walnut</h4>
-									</header><span class="image fit"><img src="images/black-walnut.png" alt="" /></span>
-								</div>
-								<div class="col-4">
-									<header>
-										<h4>Poplar</h4>
-									</header><span class="image fit"><img src="images/poplar.jpg" alt="" /></span>
+										<h4 class="centered"><a href="https://www.wood-database.com/black-walnut/">Black
+												Walnut</a>
+										</h4>
+									</header><span class="image fit"><a
+											href="https://www.wood-database.com/black-walnut/">
+											<img class="full-circle" src="images/black-walnut.png" alt="" />
+										</a></span>
 								</div>
 							</div>
+							<footer style="padding-top: 2em;">
+								<h3 class="centered">Need Something Else?</h3>
+								<p class="centered">These species account for the majority of material
+									sawn, but we occasionally bring in logs of other varieties. If what you're
+									looking for isn't listed, get in touch and we may be able to work something out.
+								</p>
+							</footer>
 						</div>
 					</div>
 				</section>
@@ -149,7 +217,10 @@
 
 
 		<!-- Section -->
-		<section class="wrapper style2 alt" id="products">
+		<section class="wrapper style2 alt">
+			<div id="products">
+				<p>&nbsp;</p>
+			</div>
 			<div class="inner">
 				<header class="major special">
 					<h1>Products</h1>
@@ -158,6 +229,61 @@
 					<header class="special">
 						<h3>Lumber</h3>
 					</header>
+					<div class="two-columns row gtr-50 gtr-uniform">
+						<div class="table-wrapper col-6">
+							<h3 class="centered">Standard Lengths</h3>
+							<table>
+								<tbody>
+									<tr>
+										<td class="centered">8'</td>
+									</tr>
+									<tr>
+										<td class="centered">10'</td>
+									</tr>
+									<tr>
+										<td class="centered">12'</td>
+									</tr>
+									<tr>
+										<td class="centered">14'</td>
+									</tr>
+									<tr>
+										<td class="centered">16'</td>
+									</tr>
+								</tbody>
+							</table>
+							<p>Each board will have excess length to accommmodate trimming each end to full length.</p>
+							<p>Additional length is available for a premium upon request. Please inquire for more
+								information.</p>
+						</div>
+						<div class="table-wrapper col-6">
+							<h3 class="centered">Standard Widths</h3>
+							<table>
+								<tbody>
+									<tr>
+										<td class="centered">4"</td>
+									</tr>
+									<tr>
+										<td class="centered">5"</td>
+									</tr>
+									<tr>
+										<td class="centered">6"</td>
+									</tr>
+									<tr>
+										<td class="centered">8"</td>
+									</tr>
+									<tr>
+										<td class="centered">10"</td>
+									</tr>
+									<tr>
+										<td class="centered">12"</td>
+									</tr>
+								</tbody>
+							</table>
+							<p>Lumber is rough sawn to exact width. Expect material to shrink over time as it dries.</p>
+							<p>Additional widths may be available for a premium (depending on wood species) upon
+								request.</p>
+						</div>
+					</div>
 					<section id="boards">
 						<div class="image"><img src="images/boards.png" alt="" /></div>
 						<div class="content">
@@ -165,75 +291,18 @@
 								<h3>Boards</h3>
 							</header>
 							<p>(Less than 2” thick)</p>
-							<p>Boards are able to be manufactured at any of the following standard lengths:</p>
-							<div class="table-wrapper">
-								<table>
-									<tbody>
-										<tr>
-											<td>Standrd Length</td>
-											<td class="centered">8'</td>
-										</tr>
-										<tr>
-											<td></td>
-											<td class="centered">10'</td>
-										</tr>
-										<tr>
-											<td></td>
-											<td class="centered">12'</td>
-										</tr>
-										<tr>
-											<td></td>
-											<td class="centered">14'</td>
-										</tr>
-										<tr>
-											<td></td>
-											<td class="centered">16'</td>
-										</tr>
-									</tbody>
-								</table>
-							</div>
-							<p>Each board will have excess length to accommodate trimming each end to length</p>
 						</div>
 					</section>
-					<section id="framing">
+					<section>
 						<div class="image"><img src="images/framing.png" alt="" /></div>
 						<div class="content">
 							<header class="major">
 								<h3>Framing Lumber</h3>
 							</header>
 							<p>(2” to 4" thick)</p>
-							<p>Framing lumber typically ranges from 2" x 4" to 2" x 12" and is able to be manufactured
-								at any of the following standard lengths:</p>
-							<div class="table-wrapper">
-								<table>
-									<tbody>
-										<tr>
-											<td>Standrd Length</td>
-											<td class="centered">8'</td>
-										</tr>
-										<tr>
-											<td></td>
-											<td class="centered">10'</td>
-										</tr>
-										<tr>
-											<td></td>
-											<td class="centered">12'</td>
-										</tr>
-										<tr>
-											<td></td>
-											<td class="centered">14'</td>
-										</tr>
-										<tr>
-											<td></td>
-											<td class="centered">16'</td>
-										</tr>
-									</tbody>
-								</table>
-							</div>
-							<p>Each board will have excess length to accommodate trimming each end to length</p>
 						</div>
 					</section>
-					<section id="framing">
+					<section>
 						<div class="image"><img src="images/timber.png" alt="" /></div>
 						<div class="content">
 							<header class="major">
@@ -254,14 +323,6 @@
 								or without the live edge or a combination of both to meet your needs.</p>
 						</div>
 					</section>
-				</div>
-			</div>
-
-			<div class="inner">
-				<header class="major special">
-					<h1>By-Products</h1>
-				</header>
-				<div class="spotlights">
 					<section>
 						<div class="image"><img src="images/bundle.png" alt="" /></div>
 						<div class="content">
@@ -273,46 +334,40 @@
 						</div>
 					</section>
 					<section>
-						<div class="image"><img src="images/pic01.jpg" alt="" /></div>
+						<div class="image"><img src="images/rounds.png" alt="" /></div>
+						<div class="content">
+							<header class="major">
+								<h3>Rounds</h3>
+							</header>
+							<p>Wood rounds are slices of wood that are cut perpendicular to the wood grain. We are able
+								to cut wood rounds up to 40-inch diameter and up to 10-inches thick. Wood rounds are
+								generally unstable so expect checks (cracks) to form in the wood as it dries.</p>
+						</div>
+					</section>
+					<section>
+						<div class="image"><img src="images/sawdust.png" alt="" /></div>
 						<div class="content">
 							<header class="major">
 								<h3>Sawdust</h3>
 							</header>
-							<p>Currently not available</p>
+							<p>Please inquire about sawdust availability. Sawdust is generally comprised of eastern
+								white pine, red oak, and red maple.</p>
 						</div>
 					</section>
-					<!-- <section>
-						<div class="image"><img src="images/pic02.jpg" alt="" /></div>
-						<div class="content">
-							<header class="major">
-								<h3>Bark Mulch</h3>
-							</header>
-							<p>Currently not available</p>
-						</div>
-					</section>
-					<section>
-						<div class="image"><img src="images/pic03.jpg" alt="" /></div>
-						<div class="content">
-							<header class="major">
-								<h3>Woodchips</h3>
-							</header>
-							<p>Currently not available</p>
-						</div>
-					</section> -->
-				</div>
-				<div class="table-wrapper">
-					<table>
-						<tbody>
-							<tr>
-								<td>Bark Mulch</td>
-								<td class="centered">Currently not available</td>
-							</tr>
-							<tr>
-								<td>Woodchips</td>
-								<td class="centered">Currently not available</td>
-							</tr>
-						</tbody>
-					</table>
+					<div class="table-wrapper padding-top">
+						<table>
+							<tbody>
+								<tr>
+									<td>Bark Mulch</td>
+									<td class="centered">Currently not available</td>
+								</tr>
+								<tr>
+									<td>Woodchips</td>
+									<td class="centered">Currently not available</td>
+								</tr>
+							</tbody>
+						</table>
+					</div>
 				</div>
 			</div>
 		</section>
