--- a/pages/services.html
+++ b/pages/services.html
@@ -23,7 +23,7 @@
 			<nav id="nav">
 				<ul>
 					<li><a href="../index.html">Home</a></li>
-					<li class="current"><a href="about-us.html">About Us</a></li>
+					<li><a href="about-us.html">About Us</a></li>
 					<li>
 						<a href="products.html" class="icon solid fa-angle-down scrolly">Products</a>
 						<ul>
@@ -31,7 +31,7 @@
 							<li><a href="products.html#products" class="scrolly">Products</a></li>
 						</ul>
 					</li>
-					<li><a href="services.html">Services</a></li>
+					<li class="current"><a href="services.html">Services</a></li>
 					<li><a href="gallery.html">Gallery</a></li>
 					<li><a href="#six" class="scrolly">Contact Us</a></li>
 				</ul>
@@ -43,7 +43,7 @@
 		<section class="wrapper style1" id="servicePad" style="padding-bottom: 2em;">
 			<div class="inner">
 				<header class="major special">
-					<h1 style="margin-bottom: 0;">About Us</h1>
+					<h1 style="margin-bottom: 0;">Services</h1>
 				</header>
 				<!-- Section -->
 				<section class="wrapper style1 lessPad" id="first" style="padding-bottom: 0;">
@@ -51,31 +51,34 @@
 
 						<div class="spotlights">
 							<section class="serviceSectionPadding">
-								<div class="image"><img src="../images/15-square.png" alt="Eastern White Pine" />
+								<div class="image"><img src="images/sawing.png" alt="Eastern White Pine" />
 								</div>
 								<div class="content">
 									<header class="major">
-										<h3>Winsor Forest Products</h3>
+										<h3>Custom Sawing</h3>
 									</header>
-									<p>In 19XX the operation was taken over and expanded by Brad Smith where
-										manufacturing continued until 2008 when a</p>
-									<p>Today, the operation has downsized significantly to a 1988 Chase #1 Handset
-										Sawmill and a Thomas 4820 Bandsaw Mill</p>
+									<p>We are able to saw your logs to meet your needs. <a href="#six"
+											class="scrolly">Contact us</a> to
+										learn more.</p>
 								</div>
 							</section>
 						</div>
-						<div class="box alt bottom-pad">
-							<div class="row gtr-50 gtr-uniform">
-								<div class="col-4">
-									<span class="image fit"><img src="../images/5.jpg" alt="" /></span>
-								</div>
-								<div class="col-4">
-									<span class="image fit"><img src="../images/7.jpg" alt="" /></span>
-								</div>
-								<div class="col-4">
-									<span class="image fit"><img src="../images/6.jpg" alt="" /></span>
-								</div>
-							</div>
+						<div>
+							<header class="major special">
+								<h3 style="margin-bottom: 0;">Beam and Header Sizing</h3>
+							</header>
+							<p class="centered less-text">Beams and headers are able to be sized according to the layout
+								and
+								loading conditions.
+								Building documents likely need to be provided to adequately size a member. A
+								professional engineer stamp can be provided if necessary.</p>
+						</div>
+						<div style="padding-top: 2em;">
+							<header class="major special">
+								<h3 style="margin-bottom: 0;">Wood Planing</h3>
+							</header>
+							<p class="centered less-text">Wood planing is availablke for boards up to 24-inches wide.
+							</p>
 						</div>
 					</div>
 				</section>
