--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
 			<li><a href="pages/about-us.html">About Us</a></li>
 			<li><a href="pages/products.html#products">Products</a></li>
 			<li><a href="pages/products.html">Species</a></li>
+			<li><a href="pages/services.html">Services</a></li>
 			<li><a href="pages/gallery.html">Gallery</a></li>
-			<li><a href="#six">Contact Us</a></li>
+			<li><a href="#six" class="scrolly">Contact Us</a></li>
 		</ul>
 	</nav>
 
@@ -106,64 +107,6 @@
 		</div>
 	</article>
 
-	<!-- Carousel -->
-	<!-- <section id="four" class="wrapper style2">
-		<div class="inner">
-			<header class="major">
-				<h2>Section #2 Idea</h2>
-			</header>
-			<div class="carousel">
-				<article>
-					<div class="image" data-position="top center">
-						<img src="images/6.jpg" alt="" />
-					</div>
-					<div class="content">
-						<h3>Something #1</h3>
-						<p>Sed egestas, ante et vulputate lorem ipsum dolor sit amet nullam pede semper est, vitae
-							luctus metus libero<br />
-							eu augue. Morbi purus sed libero, faucibus adipiscing, commodo quis, gravida lorem ipsum.
-						</p>
-						<ul class="actions special">
-							<li><a href="#" class="button primary accent2">View Gallery</a></li>
-						</ul>
-					</div>
-				</article>
-				<article>
-					<div class="image" data-position="center center">
-						<img src="images/pic05.jpg" alt="" />
-					</div>
-					<div class="content">
-						<h3>Aliquam feugiat sed malesuada</h3>
-						<p>Sit amet nullam pede semper est, vitae luctus metus libero eu augue. Morbi purus sed egestas,
-							ante et vulputate<br />
-							lorem ipsum dolor sit amet nullam. Adipiscing sed nullam tempus aliquam veroeros.</p>
-						<ul class="actions special">
-							<li><a href="#" class="button primary accent2">View Gallery</a></li>
-						</ul>
-					</div>
-				</article>
-				<article>
-					<div class="image" data-position="center center">
-						<img src="images/pic06.jpg" alt="" />
-					</div>
-					<div class="content">
-						<h3>Feugiat lorem ipsum dolor amet</h3>
-						<p>Nullam pede semper est vitae luctus metus. Magna lorem ipsum libero eu adipiscing, commodo
-							quis, gravida lorem<br />
-							ipsum. Augue morbi purus sed libero, faucibus sed tempus aliquam lorem ipsum dolor amet.</p>
-						<ul class="actions special">
-							<li><a href="#" class="button primary accent2">View Gallery</a></li>
-						</ul>
-					</div>
-				</article>
-				<nav>
-					<a href="#" class="previous"><span class="label">Previous</span></a>
-					<a href="#" class="next"><span class="label">Next</span></a>
-				</nav>
-			</div>
-		</div>
-	</section> -->
-
 	<!-- Posts -->
 	<section id="five" class="wrapper">
 		<div class="inner">
@@ -193,28 +136,6 @@
 						</ul>
 					</div>
 				</article>
-				<!-- <article>
-					<a href="#" class="image"><img src="images/9.jpg" alt="" /></a>
-					<div class="content">
-						<h3><a href="#">Something #3</a></h3>
-						<p>Sed egestas, ante et vulputate lorem ipsum sed dolor sit amet Morbi purus sed libero,
-							faucibus adipiscing, commodo quis. Lorem ipsum dolor sit amet nullam sed adipiscing.</p>
-						<ul class="actions special">
-							<li><a href="#" class="button primary accent2">View more</a></li>
-						</ul>
-					</div>
-				</article>
-				<article>
-					<a href="#" class="image"><img src="images/3.jpg" alt="" /></a>
-					<div class="content">
-						<h3><a href="#">Something #4</a></h3>
-						<p>Sed egestas, ante et vulputate lorem ipsum sed dolor sit amet Morbi purus sed libero,
-							faucibus adipiscing, commodo quis. Lorem ipsum dolor sit amet nullam sed adipiscing.</p>
-						<ul class="actions special">
-							<li><a href="#" class="button primary accent2">View more</a></li>
-						</ul>
-					</div>
-				</article> -->
 			</div>
 		</div>
 	</section>
