--- a/index.html
+++ b/index.html
@@ -145,11 +145,9 @@
 		<div class="inner">
 			<header class="major">
 				<h2>Contact Us</h2>
-				<p class="contact-p">Bardford Smith: <a href="tel:4016472755"
-						onclick="ga('send', 'event', { eventCategory: 'Contact', eventAction: 'Call', eventLabel: 'Mobile Button'});">(401)
+				<p class="contact-p">Bardford Smith: <a href="tel:4016472755">(401)
 						647-2755</a></p>
-				<p class="contact-p">Timothy Smith, PE: <a href="tel:4013007814"
-						onclick="ga('send', 'event', { eventCategory: 'Contact', eventAction: 'Call', eventLabel: 'Mobile Button'});">(401)
+				<p class="contact-p">Timothy Smith, PE: <a href="tel:4013007814">(401)
 						300-7814</a></p>
 				<p class="contact-p"><a
 						href="https://www.google.com/maps/place/55+Winsor+Rd,+Foster,+RI+02825/@41.841795,-71.7307835,17z/data=!3m1!4b1!4m6!3m5!1s0x89e4306e4358713b:0x17bfea306c91767b!8m2!3d41.841795!4d-71.7307835!16s%2Fg%2F11f2wlsrnv">55
@@ -188,8 +186,7 @@
 			<li class="icon solid fa-map-marker-alt"><a
 					href="https://www.google.com/maps/place/55+Winsor+Rd,+Foster,+RI+02825/@41.841795,-71.7307835,17z/data=!3m1!4b1!4m6!3m5!1s0x89e4306e4358713b:0x17bfea306c91767b!8m2!3d41.841795!4d-71.7307835!16s%2Fg%2F11f2wlsrnv">55
 					Winsor Road, Foster, RI</a></li>
-			<li class="icon solid fa-phone"><a href="tel:4013007814"
-					onclick="ga('send', 'event', { eventCategory: 'Contact', eventAction: 'Call', eventLabel: 'Mobile Button'});">(401)
+			<li class="icon solid fa-phone"><a href="tel:4013007814">(401)
 					300-7814</a></li>
 			<li class="icon solid fa-envelope"><a
 					href="https://mail.google.com/mail/?view=cm&fs=1&to=winsor.forest.products@gmail.com&su=Subject&body=Body">winsor.forest.products@gmail.com</a>
