--- a/pages/services.html
+++ b/pages/services.html
@@ -90,11 +90,9 @@
 			<div class="inner">
 				<header class="major special alt">
 					<h2 class="centered">Contact Us</h2>
-					<p class="contact-p">Bardford Smith: <a href="tel:4016472755"
-							onclick="ga('send', 'event', { eventCategory: 'Contact', eventAction: 'Call', eventLabel: 'Mobile Button'});">(401)
+					<p class="contact-p">Bardford Smith: <a href="tel:4016472755">(401)
 							647-2755</a></p>
-					<p class="contact-p">Timothy Smith, PE: <a href="tel:4013007814"
-							onclick="ga('send', 'event', { eventCategory: 'Contact', eventAction: 'Call', eventLabel: 'Mobile Button'});">(401)
+					<p class="contact-p">Timothy Smith, PE: <a href="tel:4013007814">(401)
 							300-7814</a></p>
 					<p class="contact-p"><a
 							href="https://www.google.com/maps/place/55+Winsor+Rd,+Foster,+RI+02825/@41.841795,-71.7307835,17z/data=!3m1!4b1!4m6!3m5!1s0x89e4306e4358713b:0x17bfea306c91767b!8m2!3d41.841795!4d-71.7307835!16s%2Fg%2F11f2wlsrnv">55
@@ -134,9 +132,7 @@
 						class="icon alt solid fa-map-marker"><span class="label">Location</span></a></li>
 				<li><a href="https://mail.google.com/mail/?view=cm&fs=1&to=winsor.forest.products@gmail.com&su=Subject&body=Body"
 						class="icon alt fa-envelope"><span class="label">Email</span></a></li>
-				<li><a href="tel:4013007814"
-						onclick="ga('send', 'event', { eventCategory: 'Contact', eventAction: 'Call', eventLabel: 'Mobile Button'});"
-						class="icon alt solid fa-phone"><span class="label">Phone</span></a></li>
+				<li><a href="tel:4013007814" class="icon alt solid fa-phone"><span class="label">Phone</span></a></li>
 			</ul>
 			<p class="copyright">
 				&copy; <a href="https://www.webundefined.com/">Web Undefined, LLC</a>. All rights reserved.
